--- a/public/404.html
+++ b/public/404.html
@@ -195,9 +195,9 @@
       <div class="four-oh-four"><h1>404 Error</h1></div>
 
       <div class="warning">
-          <h2>"All those moments will be lost in time, like tears in rain."</h2>
-          <p>The page you are looking for might have been removed, had its name changed, or is temporarily unavailable.</p>
-          <a href="javascript:history.back()">Please go back to the previous page</a>
+          <h2>"Tous ces moments seront perdus dans le temps, comme des larmes sous la pluie."</h2>
+          <p>La page que vous recherchez a peut-être été supprimée, son nom a peut-être été modifié ou est temporairement indisponible...</p>
+          <a href="javascript:history.back()">S'il vous plaît revenir à la page précédente</a>
       </div>
 
       <div class="footer"><p class="copyright">&copy; 2013 Redfrost.com</p></div>
