Correct sentence in page 500

--- a/public/500.html
+++ b/public/500.html
@@ -190,7 +190,7 @@
       <div class="five-double-o"><h1>Erreur 500</h1></div>
 
       <div class="warning">
-          <h2>"La poésie est à la vie ce qu'est le feu de bois. Elle en émane et la transforme."</h2>
+          <h2>"La poésie est à la vie ce que le feu est au bois. Elle en émane et la transforme."</h2>
           <p>Nous sommes désolés, une erreur s'est produite...</p>
           <p>Si vous êtes le propriétaire de l'application, consultez les logs pour plus d'informations.</p>
           <a href="javascript:history.back()">Revenir à la page précédente</a>
